# fastai_example

./: Dockerfile  MLproject  pyproject.toml  requirements.txt  test.py  variables.zsh
.dvc/: config
data/: .gitignore  mnist_tiny.dvc  mnist_tiny.tgz.dvc
fastai_example/: fastai_classifier_module.py  predict_fastai.py  train.py
tests/: test_fastai_example.py
