[tool.poetry]
name = "fastai_example"
version = "0.1.0"
description = ""
authors = ["Luis Díaz <luigirdf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastai = "^1.0.61"
mlflow = "^1.19.0"
dvc = "^2.6.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
