[tool.poetry]
name = "fastai_example"
version = "0.1.0"
description = ""
authors = ["Luis Díaz <luigirdf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^1.26"
dvc = {extras = ["s3"], version = "^2.7.3"}
fastai = "^2.6.3"
protobuf = "^3.20"
Pillow = "^9.1.1"
ipython = "^8.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
